saves/test/demo_full_20240802_193545/dff16e/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp dff16e_tb.v dff16e.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
dff16e_tb.v:141: $finish called at 340000 (1ps)

iverilog cmd 2 error:

